kubernetes/kong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi1-ingress
  namespace: default
  annotations:
    konghq.com/plugins: jwt
spec:
  ingressClassName: "kong"
  rules:
  - http:
      paths:
      - path: /action
        pathType: Prefix
        backend:
          service:
            name: fastapi1
            port:
              number: 8001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi2-ingress
  namespace: default
  annotations:
    konghq.com/plugins: jwt
spec:
  ingressClassName: "kong"
  rules:
  - http:
      paths:
      - path: /action
        pathType: Prefix
        backend:
          service:
            name: fastapi2
            port:
              number: 8001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi3-ingress
  namespace: default
  annotations:
    konghq.com/plugins: jwt
spec:
  ingressClassName: "kong"
  rules:
  - http:
      paths:
      - path: /action
        pathType: Prefix
        backend:
          service:
            name: fastapi3
            port:
              number: 8001
